# webrtcServer

./: CMakeLists.txt
FBS/: activeSpeakerObserver.h  audioLevelObserver.h  common.h  consumer.h  dataConsumer.h  dataProducer.h  directTransport.h  liburing.h  log.h  message.h  notification.h  pipeTransport.h  plainTransport.h  producer.h  request.h  response.h  router.h  rtpObserver.h  rtpPacket.h  rtpParameters.h  rtpStream.h  rtxStream.h  sctpAssociation.h  sctpParameters.h  srtpParameters.h  transport.h  webRtcServer.h  webRtcTransport.h  worker.h
conf/: config.json
fuzzer/include/RTC/: FuzzerDtlsTransport.hpp
fuzzer/reports/: crash-89d745213ab3a50a7bd6c0bfaa3caf3dd5b81c96  crash-b1dc07dd80d43d55c727cbf97e3db1285502bc39  crash-cfd568c4ff6705458b0f431bf5e6fc89d7aa6883
src/: CMakeLists.txt  ChannelMessageRegistrator.hpp  DepLibUV.cpp  DepLibUV.hpp  DepUsrSCTP.cpp  DepUsrSCTP.hpp  Logger.hpp  Settings.cpp  Worker.cpp  Worker.hpp  lib.cpp  lib.hpp  main.cpp
src/Channel/: ChannelNotification.hpp  ChannelNotifier.hpp  ChannelSocket.cpp  ChannelSocket.hpp
src/Utils/: BitStream.cpp  Config.cpp  Config.hpp  Crypto.cpp  File.cpp  IP.cpp  String.cpp  Utils.hpp
src/grpc/: singal.grpc.pb.cc  singal.grpc.pb.h  singal.pb.cc  singal.pb.h  singal.proto  workerClient.cpp  workerClient.h
src/handles/: TcpConnectionHandle.cpp  TcpConnectionHandle.hpp  TcpServerHandle.hpp  UdpSocketHandle.cpp  UdpSocketHandle.hpp  UnixStreamSocketHandle.cpp  UnixStreamSocketHandle.hpp
src/rtc/: ActiveSpeakerObserver.cpp  ActiveSpeakerObserver.hpp  AudioLevelObserver.cpp  AudioLevelObserver.hpp  BweType.hpp  Consts.hpp  Consumer.cpp  Consumer.hpp  ConsumerTypes.hpp  DataConsumer.cpp  DataConsumer.hpp  DataProducer.cpp  DataProducer.hpp  DirectTransport.cpp  DirectTransport.hpp  DtlsTransport.cpp  DtlsTransport.hpp  IceCandidate.cpp  IceCandidate.hpp  IceServer.cpp  IceServer.hpp  KeyFrameRequestManager.cpp  KeyFrameRequestManager.hpp  NackGenerator.cpp  NackGenerator.hpp  Parameters.hpp  PipeConsumer.cpp  PipeConsumer.hpp  PipeTransport.cpp  PipeTransport.hpp  PlainTransport.cpp  PlainTransport.hpp  PortManager.cpp  PortManager.hpp  Producer.cpp  Producer.hpp  RateCalculator.cpp  RateCalculator.hpp  Router.cpp  Router.hpp  (+66 more)
src/rtc/Codecs/: AV1.cpp  AV1.hpp  DependencyDescriptor.cpp  DependencyDescriptor.hpp  H264.cpp  H264.hpp  Opus.cpp  Opus.hpp  PayloadDescriptorHandler.hpp  Tools.hpp  VP8.cpp  VP8.hpp  VP9.cpp  VP9.hpp
src/rtc/RtpDictionaries/: Parameters.cpp  RtcpFeedback.cpp  RtcpParameters.cpp  RtpCodecMimeType.cpp  RtpCodecParameters.cpp  RtpEncodingParameters.cpp  RtpHeaderExtensionParameters.cpp  RtpHeaderExtensionUri.cpp  RtpParameters.cpp  RtpRtxParameters.cpp
src/rtc/SctpDictionaries/: SctpStreamParameters.cpp
src/rtc/rtcp/: Bye.cpp  Bye.hpp  CompoundPacket.cpp  CompoundPacket.hpp  Feedback.cpp  Feedback.hpp  FeedbackPs.cpp  FeedbackPs.hpp  FeedbackPsAfb.cpp  FeedbackPsAfb.hpp  FeedbackPsFir.cpp  FeedbackPsFir.hpp  FeedbackPsLei.cpp  FeedbackPsLei.hpp  FeedbackPsPli.cpp  FeedbackPsPli.hpp  FeedbackPsRemb.cpp  FeedbackPsRemb.hpp  FeedbackPsRpsi.cpp  FeedbackPsRpsi.hpp  FeedbackPsSli.cpp  FeedbackPsSli.hpp  FeedbackPsTst.cpp  FeedbackPsTst.hpp  FeedbackPsVbcm.cpp  FeedbackPsVbcm.hpp  FeedbackRtp.cpp  FeedbackRtp.hpp  FeedbackRtpEcn.cpp  FeedbackRtpEcn.hpp  FeedbackRtpNack.cpp  FeedbackRtpNack.hpp  FeedbackRtpSrReq.cpp  FeedbackRtpSrReq.hpp  FeedbackRtpTllei.cpp  FeedbackRtpTllei.hpp  FeedbackRtpTmmb.cpp  FeedbackRtpTmmb.hpp  FeedbackRtpTransport.cpp  FeedbackRtpTransport.hpp  (+13 more)
src/rtc/sctp/association/: Socket.cpp  Socket.hpp  StateCookie.cpp  StateCookie.hpp  TransmissionControlBlock.hpp
src/rtc/sctp/packet/: Chunk.cpp  Chunk.hpp  ErrorCause.hpp  Packet.cpp  Packet.hpp  Parameter.hpp  TLV.cpp  TLV.hpp
src/rtc/sctp/packet/chunks/: AbortAssociationChunk.hpp  CookieAckChunk.cpp  CookieAckChunk.hpp  CookieEchoChunk.hpp  DataChunk.hpp  ForwardTsnChunk.hpp  HeartbeatAckChunk.hpp  HeartbeatRequestChunk.hpp  IDataChunk.hpp  IForwardTsnChunk.hpp  InitAckChunk.hpp  InitChunk.hpp  OperationErrorChunk.hpp  ReConfigChunk.hpp  SackChunk.cpp  SackChunk.hpp  ShutdownAckChunk.cpp  ShutdownAckChunk.hpp  ShutdownChunk.cpp  ShutdownChunk.hpp  ShutdownCompleteChunk.cpp  ShutdownCompleteChunk.hpp  UnknownChunk.hpp
src/rtc/sctp/packet/errorCauses/: CookieReceivedWhileShuttingDownErrorCause.cpp  CookieReceivedWhileShuttingDownErrorCause.hpp  InvalidMandatoryParameterErrorCause.cpp  InvalidMandatoryParameterErrorCause.hpp  InvalidStreamIdentifierErrorCause.cpp  InvalidStreamIdentifierErrorCause.hpp  MissingMandatoryParameterErrorCause.hpp  NoUserDataErrorCause.cpp  NoUserDataErrorCause.hpp  OutOfResourceErrorCause.cpp  OutOfResourceErrorCause.hpp  ProtocolViolationErrorCause.hpp  RestartOfAnAssociationWithNewAddressesErrorCause.hpp  StaleCookieErrorCause.cpp  StaleCookieErrorCause.hpp  UnknownErrorCause.cpp  UnknownErrorCause.hpp  UnrecognizedChunkTypeErrorCause.hpp  UnrecognizedParametersErrorCause.hpp  UnresolvableAddressErrorCause.hpp  UserInitiatedAbortErrorCause.hpp
src/rtc/sctp/packet/parameters/: AddIncomingStreamsRequestParameter.cpp  AddIncomingStreamsRequestParameter.hpp  AddOutgoingStreamsRequestParameter.cpp  AddOutgoingStreamsRequestParameter.hpp  CookiePreservativeParameter.cpp  CookiePreservativeParameter.hpp  ForwardTsnSupportedParameter.cpp  ForwardTsnSupportedParameter.hpp  HeartbeatInfoParameter.hpp  IPv4AddressParameter.cpp  IPv4AddressParameter.hpp  IPv6AddressParameter.cpp  IPv6AddressParameter.hpp  IncomingSsnResetRequestParameter.hpp  OutgoingSsnResetRequestParameter.hpp  ReconfigurationResponseParameter.hpp  SsnTsnResetRequestParameter.cpp  SsnTsnResetRequestParameter.hpp  StateCookieParameter.hpp  SupportedAddressTypesParameter.hpp  SupportedExtensionsParameter.hpp  UnknownParameter.hpp  UnrecognizedParameterParameter.hpp  ZeroChecksumAcceptableParameter.cpp  ZeroChecksumAcceptableParameter.hpp
test/include/: helpers.hpp
test/src/: helpers.cpp
test/src/RTC/: TestNackGenerator.cpp  TestRtpPacket.cpp  TestRtpStreamRecv.cpp  TestRtpStreamSend.cpp  TestSeqManager.cpp  (+3 more)
(+89 files in other folders)
